kubernetes/home/apps/network/envoy-gateway/config/internal/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: ${ENVOY_INTERNAL_IPv4},${ENVOY_INTERNAL_IPv6}
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: internal-wildcard-tls
            namespace: network
    - name: socks5
      protocol: TCP
      port: 1080
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
